--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
         with:
           githubToken: ${{ secrets.PERSONAL_TOKEN }}
           cname: ${{ secrets.CNAME }} 
+          args: -t hermit
