--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           githubToken: ${{ secrets.PERSONAL_TOKEN }}
           cname: ${{ secrets.CNAME }} 
-          args: -t hermit
+          args: -t hermit --gc --minify --cleanDestinationDir
