--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         uses: chabad360/hugo-gh-pages@master
         with:
           githubToken: ${{ secrets.PERSONAL_TOKEN }}
-          cname: ${{ secrets.CNAME }} 
-          args: -t hermit --gc --minify --cleanDestinationDir
+          cname: metaspacenow.com
+          args: --theme hermit --gc --minify --cleanDestinationDir
