fix domain name

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 relativeUrls = true
-baseURL = "https://MetaSpace.org"
+baseURL = "https://MetaSpaceNow.com"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "MetaSpace"
